style: Add a service icon

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
   <body>
     <header>
+      <img src="./grid-on-images.png"
+           width="70px">
       <h1>
         <a href="/"
-          >Grid on Images <br /><span style="color: gray;">
+          >Grid on Images <br /><span style="color: gray; padding-left: 30px;">
             // under construction 🚧</span
           ></a
         >
