style: Remove redundant title

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
            width="70px">
       <h1>
         <a>
-          Grid on Images <br /><span style="color: gray; padding-left: 30px; font-style: italic">
-            // under construction 🚧</span>
+          Grid on Images
         </a>
       </h1>
       <nav class="pc-nav">
