feat: 主軸線と主軸番号を追加

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <input
               type="checkbox"
               class="switch__input"
-              onchange="drawGrid()"
+              onchange="makeBorderColorWhite()"
             />
             <span class="switch__content"></span>
             <span class="switch__circle"></span>
