chore: Update *.png paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="./favicon.png">
+    <link rel="shortcut icon" href="./assets/favicon.png">
 
     <!-- import the webpage's javascript file -->
     <script src="./script.js" defer></script>
@@ -28,12 +28,12 @@
         <ul>
           <li>
             <a href="https://kenmikanmi.github.io/blog/authors/Kenya-Hondoh">
-              <img src="./about-me.png" width="80px" style="padding-right: 40px">
+              <img src="./assets/about-me.png" width="80px" style="padding-right: 40px">
             </a>
           </li>
           <li>
             <a href="https://github.com/kenmikanmi/grid-on-images">
-              <img src="./github.png">
+              <img src="./assets/github.png">
             </a>
           </li>
         </ul>
