refactor: Delete redundant processes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <img src="./grid-on-images.png"
+      <img src="./assets/grid-on-images.png"
            width="70px">
       <h1>
         <a>
@@ -67,10 +67,11 @@
         <div class="border-color">
            <p>グリッドの色</p>
           <div>
-            <a class="button-white" onclick="makeBorderColorWhite()"></a>
+            <!-- <a class="button-white" onclick="makeBorderColorWhite()"></a> -->
+            <a class="button-white"></a>
           </div>
           <div>
-            <a class="button-black" onclick="makeBorderColorBlack()"></a>
+            <a class="button-black"></a>
           </div>
         </div>
       </div>
