feat: Add zoom slider

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           <input type="file" id="file" />
         </label>
 
+        <div class="slider">
+          <span>➖</span>
+          <input id="zoom-slider" type="range">
+          <span>➕</span>
+        </div>
+
         <p>グリッドを表示</p>
         <div class="switch">
           <label class="switch__label">
