chore: Modify id

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <nav class="pc-nav">
         <ul>
           <li>
-            <a href="https://kenmikanmi.github.io/blog/authors/Kenya-Hondoh">
+            <a href="https://kenchon.github.io/blog/authors/Kenya-Hondoh">
               <img src="./assets/about-me.png" width="80px" style="padding-right: 40px">
             </a>
           </li>
           <li>
-            <a href="https://github.com/kenmikanmi/grid-on-images">
+            <a href="https://github.com/kenchon/grid-on-images">
               <img src="./assets/github.png">
             </a>
           </li>
